--- a/资料库/00_调研整理/001_合成数据技术/技术整理/合成数据挑战.md
+++ b/资料库/00_调研整理/001_合成数据技术/技术整理/合成数据挑战.md
@@ -34,9 +34,9 @@
 	- 主要操作：①从公共知识库中挑选数据②知识通过instructGPT转成简单句③简单句通过instructGPT转成对话句
 	- 最终效果：远远高于现有方法
 - [[(2023) Language Models are Realistic tabular Data Generators]]
-	- 主要目的：
-	- 主要操作：
-	- 最终效果：
+	- 主要目的：Tabular Data 生成。
+	- 主要操作：制作Tabular Data生成模型，训练生成模型①Tabular转成每一行一个文本（基于模板）②文本Finetune一个语言模型。测试生成模型，给多行文本（只给前部分）输入至模型，模型补全后半部分。将后半部分文本转化成Tabular（转化比较简单，模板化）
+	- 最终效果：1~2个点的提升比较多，少量到5个点左右。
 - [[(2023) Does Synthetic Data Generation of LLMs Help Clinical Text Mining]]
 	- 主要目的：ChatGPT在医学NER等表现不好，利用ChatGPT生成数据进行Finetune
 	- 主要操作：利用ChatGPT生成好的Prompt，利用生成好的Prompt生成数据，进行Finetune训练
