--- a/资料库/00_调研整理/001_合成数据技术/技术整理/可控生成技术.md
+++ b/资料库/00_调研整理/001_合成数据技术/技术整理/可控生成技术.md
@@ -7,6 +7,7 @@
 	- [[Guided decoding methods]]
 		- ranking candidate score
 	- [[Trainalbe decoding methods]]
+		- [[(2019) Plug and play language models, A simple approach to controlled text generation]]
 - Controllable by Conditional model
 	- [[Conditional training]]
 		- conditional training.
