--- a/资料库/90_工具手册/写论文.md
+++ b/资料库/90_工具手册/写论文.md
@@ -1,18 +1,17 @@
 # 架构
 ---
-- 摘要：用 100-200 词简介研究任务与挑战、解决思路与方法、实验效果与结论。
-- 介绍：用 1 页左右篇幅，比摘要更详细地介绍研究任务、已有方法、主要挑战、解决思路、具体方法、实验结果。
-- 相关工作：用 0.5-1 页左右篇幅介绍研究任务的相关工作，说明本文工作与已有工作的异同。
-- 方法：用 2-3 页篇幅介绍本文提出的方法模型细节。
-- 实验：用 2-3 页篇幅介绍验证本文方法有效性的实验设置、数据集合、实验结果、分析讨论等。
-	- **（1）主实验**。目的是证明本文方法与已有方法相比的有效性。一般需要选取业界公认的数据集合或已有工作采用的实验验证方式，提升实验的可信性。对于学术论文而言，并不需要比该任务上最好的方法相比，只要证明采用本文创新方法与不采用本文方法相比更有效即可，也就是说，实验中尽量控制其他变量，只聚焦于本文关注的挑战问题即可。当然，如果能够因为本文创新思路，得到该任务上的最好效果，会更有吸引力，但不必总是强求。
-	- **（2）辅助实验**。目的是展示本文创新方法的优势和特点。例如，不同超参数对本文方法的影响（Hyper-Parameter Effect），不同模块对本文方法效果的贡献（Ablation Test），不同数据划分对本文方法的影响（如 Few-shot Learning 相关工作比较常见），本文方法的主要错误类型（Error Analysis），本文方法能够改进效果的典型样例（Case Study）等。这些实验需要根据论文创新工作特点而有针对性的设计，一切要为体现本文的创新价值而服务。
-- 结论：简单总结本文主要工作，展望未来研究方向。
-	- 在论文最后会有总结展望，一般用一段来再次总结和强调本文的创新思路和实验结果，然后说明未来建议的研究方向和开放问题。这部分相对来讲比较固定。稍微留意的是，在准备论文最后阶段，如果发现论文有哪些应当做还没来得及做的，可以写作本文的未来工作。至少可以向审稿人表明你也想到这个问题了，赢得一点同情分。
+- 先写Figures. 理清整体文章逻辑。
+- 写Introduction， 很重要
+- 写实验，
+- 写Method
+- 写相关技术
+- 写其他部分
 
 # Reference
 ---
 - [清华大学刘知远：如何写一篇合格的NLP论文 (qq.com)](https://mp.weixin.qq.com/s/czrgveZqruwNsag-rws7dg)
+- [3. The Abstract - Organizing Academic Research Papers - Research Guides at Sacred Heart University （英文）](https://library.sacredheart.edu/c.php?g=29803&p=185914)
+- 
 
 # 资源
 ---
