--- a/资料库/90_工具手册/写论文.md
+++ b/资料库/90_工具手册/写论文.md
@@ -4,10 +4,15 @@
 - 写Introduction， 很重要
 	- 参考：引言的目的是引导读者从一般学科领域进入特定的研究领域。它通过总结当前对该主题的理解和背景信息，以假设、问题或研究问题的形式陈述工作目的，简要解释您的基本原理、方法论方法，突出您的研究可以揭示的潜在结果，并描述论文的其余结构，从而建立正在进行的研究的背景。
 - 写实验，
+	- 配置环境数据集等，代码等
+	- 与现有方法对比
+	- 其他的分析结果
 - 写Method
 - 写相关技术
+	- 需要读者了解的信息，帮助更好的理解本论文
 - 写其他部分
 	- Abstract: 摘要通常用一个300字或更少的段落总结整篇论文的主要方面，包括：1）研究的总体目的和你调查的研究问题;2）研究的基本设计;3）通过分析发现的主要发现或趋势;4）您的解释和结论的简要总结。
+	- 结论：结论旨在帮助读者理解为什么你的研究在他们读完论文后对他们很重要。结论不仅仅是对你的观点的总结或对你的研究问题的重新陈述，而是对关键点的综合。对于大多数文章来说，一个完善的段落就足以得出结论，尽管在某些情况下，可能需要两到三个段落的结论。
 
 # Reference
 ---
